wordpress/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  selector:
    app: wordpress
  ports:
    - name: http
      port: 8080
      targetPort: 8080
